--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,8 +1,11 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary mb-2">
   <div class="container-fluid">
     <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="/home">Home</a>
-        <a class="nav-link" href="/users/:id">Profile</a>
+        <a class="nav-link" aria-current="page" href="/home">Home</a>
+        {{#if currentUser}}
+          <a class="nav-link" href="/users/{{currentUser.username}}?section=about">Profile</a>
+          <a class="nav-link" href="/logout">Logout</a>
+        {{/if}}
     </div>
   </div>
 </nav>
