semi profile post

--- a/views/users/profile/edit.hbs
+++ b/views/users/profile/edit.hbs
@@ -11,11 +11,11 @@
         <div class="sidebar col">
             <div class="d-flex align-items-start">
                 <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                    <a href="/users/{{currentUser.username}}?section=about" class="btn {{activeButtonClass 'about' currentSection}} mb-1" type="button">Overview</a>
-                    <a href="/users/{{currentUser.username}}?section=tastes" class="btn mb-1 {{activeButtonClass 'tastes' currentSection}}" type="button">Tastes</a>
-                    <a href="/users/{{currentUser.username}}?section=activity" class="btn mb-1 {{activeButtonClass 'activity' currentSection}}" type="button">Activity</a>
-                    <a href="/users/{{currentUser.username}}?section=songs" class="btn mb-1 {{activeButtonClass 'songs' currentSection}}" type="button">Songs</a>
-                    <a href="/users/{{currentUser.username}}?section=events" class="btn {{activeButtonClass 'events' currentSection}}" type="button">Events</a>
+                    <a href="/users/{{currentUser.username}}/edit?section=about" class="btn {{activeButtonClass 'about' currentSection}} mb-1" type="button">Overview</a>
+                    <a href="/users/{{currentUser.username}}/edit?section=tastes" class="btn mb-1 {{activeButtonClass 'tastes' currentSection}}" type="button">Tastes</a>
+                    <a href="/users/{{currentUser.username}}/edit?section=activity" class="btn mb-1 {{activeButtonClass 'activity' currentSection}}" type="button">Activity</a>
+                    <a href="/users/{{currentUser.username}}/edit?section=songs" class="btn mb-1 {{activeButtonClass 'songs' currentSection}}" type="button">Songs</a>
+                    <a href="/users/{{currentUser.username}}/edit?section=events" class="btn {{activeButtonClass 'events' currentSection}}" type="button">Events</a>
         
                 </div>
             </div>
