--- a/views/users/partials/tastes.hbs
+++ b/views/users/partials/tastes.hbs
@@ -1,5 +1,5 @@
 <div class="card-body">
-    <h5 class="card-title">My favorite Artist...</h5>
+    <h5 class="card-title">Genres</h5>
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
 </div>
