--- a/views/users/partials/activity.hbs
+++ b/views/users/partials/activity.hbs
@@ -1,5 +1,11 @@
 <div class="card-body">
     <h5 class="card-title">Activity</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    {{#each user.artists as |artist|}}
+        <div class="card mb-2">
+            <div class="card-body">
+                <p class="card-text">{{../user.username}} followed {{artist.name}}</p>
+                <small class="card-text d-block">{{date artist.timestamp}}</small>
+            </div>
+        </div>
+    {{/each}}
 </div>
