--- a/views/users/profile/home.hbs
+++ b/views/users/profile/home.hbs
@@ -1,4 +1,4 @@
-<div class=" d-flex justify-content-start p-2 mb-5 bg-secondary" style="--bs-bg-opacity: .5;">
+<div class=" d-flex justify-content-start p-2 mb-5 bg-secondary rounded" style="--bs-bg-opacity: .5;">
     <h2 class="flex-grow-1">{{user.username}}</h2>
     <a class="btn btn-secondary me-1">Random</a>
     <a class="btn btn-secondary me-1">Random</a>
