--- a/views/users/partials/activity.hbs
+++ b/views/users/partials/activity.hbs
@@ -1,11 +1,20 @@
 <div class="card-body">
     <h5 class="card-title">Activity</h5>
-    {{#each user.artists as |artist|}}
+    {{#each postsAndArtists as |element|}}
+        {{#isArtist element}}
+                <div class="card mb-2">
+                    <div class="card-body">
+                        <p class="card-text">{{../user.username}} followed {{element.name}}</p>
+                        <small class="card-text d-block">{{date element.timestamp}}</small>
+                    </div>
+                </div>
+        {{else}}
         <div class="card mb-2">
             <div class="card-body">
-                <p class="card-text">{{../user.username}} followed {{artist.name}}</p>
-                <small class="card-text d-block">{{date artist.timestamp}}</small>
+                <p class="card-text">{{../user.username}} posted {{element.message}}</p>
+                <small class="card-text d-block">{{date element.createdAt}}</small>
             </div>
         </div>
+        {{/isArtist}}
     {{/each}}
 </div>
