--- a/public/style/style.css
+++ b/public/style/style.css
@@ -7,4 +7,12 @@
     display: none;
 }
 
+.max-size {
+    max-width: 300px;
+    max-height: 300px;
+}
 
+.avatar {
+    max-width: 100px;
+    max-height: 100px;
+}
