--- a/views/common/home.hbs
+++ b/views/common/home.hbs
@@ -1,8 +1,12 @@
 <div class="d-flex justify-content-center mb-5">
     <div class="card col-6 text-end">
       <div class="card-body">
-        <form method="POST" action="/home">
+        <form method="POST" action="/home" enctype="multipart/form-data">
                 <textarea class="form-control overflow-y-auto mb-2" name="message" rows="3" placeholder="What's on your mind, {{currentUser.username}}?"></textarea>
+                <div class="input-group mb-3">
+                  <label class="input-group-text" for="image"><i class="fa fa-picture-o"></i></label> 
+                  <input type="file" name="image" class="form-control {{#if errors.image}}is-invalid{{/if}}">
+                </div>
                 <button type="submit" class="btn btn-outline-secondary">Post</button>
             </form>
       </div>
@@ -19,6 +23,9 @@
                 </div>
             </div>
             <textarea class="form-control overflow-y-auto mt-2 mb-2" name="message" rows="3" readonly>{{post.message}}</textarea>
+            {{#if post.image}}
+            <img src="{{post.image}}" class="img-thumbnail max-size mx-auto d-block" alt="...">
+            {{/if}}
             <small>{{date post.createdAt}}</small>
         </div>
       {{/each}}
