--- a/views/users/profile/home.hbs
+++ b/views/users/profile/home.hbs
@@ -1,8 +1,16 @@
 <div class=" d-flex justify-content-start p-2 mb-5 bg-secondary rounded" style="--bs-bg-opacity: .5;">
-    <h2 class="flex-grow-1">{{user.username}}</h2>
-    <a class="btn btn-secondary me-1">Random</a>
-    <a class="btn btn-secondary me-1">Random</a>
-    <a class="btn btn-secondary">Random</a>
+    <form method="POST" action="/home" enctype="multipart/form-data">
+        <input type="file" name="avatar" hidden>
+        <label for="avatar-image">
+          <button type="submit" onclick="findAvatar()"><img class="avatar"src="https://ionicframework.com/docs/img/demos/avatar.svg" alt="Avatar Image"></button>
+        </label>
+    </form>
+    <h2 class="ps-3 modal-dialog-centered flex-grow-1">{{user.username}}</h2>
+    <div>
+        <a class="btn btn-secondary me-1">Add photo</a>
+        <a class="btn btn-secondary me-1">Random</a>
+        <a class="btn btn-secondary">Random</a>
+    </div>
 </div>
 
 <div class="container d-flex">
@@ -15,7 +23,6 @@
                     <a href="/users/{{user.username}}?section=activity" class="btn mb-1 {{activeButtonClass 'activity' currentSection}}" type="button">Activity</a>
                     <a href="/users/{{user.username}}?section=songs" class="btn mb-1 {{activeButtonClass 'songs' currentSection}}" type="button">Songs</a>
                     <a href="/users/{{user.username}}?section=events" class="btn {{activeButtonClass 'events' currentSection}}" type="button">Events</a>
-        
                 </div>
             </div>
          </div>
