--- a/views/common/home.hbs
+++ b/views/common/home.hbs
@@ -3,6 +3,10 @@
       <div class="card-body">
         <form method="POST" action="/home" enctype="multipart/form-data">
                 <textarea class="form-control overflow-y-auto mb-2" name="message" rows="3" placeholder="What's on your mind, {{currentUser.username}}?"></textarea>
+                <div class="input-group mb-2">
+                <span class="input-group-text"><i class="fa fa-music"></i></span>
+                <textarea class="form-control" rows="1" aria-label="With textarea" name="song" placeholder="Share your Youtube URL to post a song"></textarea>
+                </div>
                 <div class="input-group mb-3">
                   <label class="input-group-text" for="image"><i class="fa fa-picture-o"></i></label> 
                   <input type="file" name="image" class="form-control {{#if errors.image}}is-invalid{{/if}}">
@@ -13,7 +17,7 @@
     </div>
 </div>
 <div class="d-flex justify-content-center">
-    <div class="card p-2 col-6">
+    <div class="card p-2 col-8">
       {{#each posts as |post|}} 
         <div class="card p-2 mb-5 border border-light">
             <div class="d-flex justify-content-between">
@@ -23,9 +27,14 @@
                 </div>
             </div>
             <textarea class="form-control overflow-y-auto mt-2 mb-2" name="message" rows="3" readonly>{{post.message}}</textarea>
-            {{#if post.image}}
-            <img src="{{post.image}}" class="img-thumbnail max-size mx-auto d-block" alt="...">
-            {{/if}}
+            <div class="d-flex">
+              {{#if post.image}}
+              <img src="{{post.image}}" class="img-fluid max-size mx-auto" alt="...">
+              {{/if}}
+              {{#if post.song}}
+              <div><iframe width="480" height="270" src="https://www.youtube.com/embed/{{post.song}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+              {{/if}}
+            </div>
             <small>{{date post.createdAt}}</small>
         </div>
       {{/each}}
