--- a/views/common/list.hbs
+++ b/views/common/list.hbs
@@ -1,7 +1,7 @@
-<div class="row mb-4">
+<div class="row">
     {{#each users as |user|}}
         {{#isUser user ../currentUser}}
-        <div class="card col-3 d-flex flex-column justify-content-between me-5 p-1" style="width: 250px; height: auto">
+        <div class="mb-4 card col-3 d-flex flex-column justify-content-between me-5 p-1" style="width: 250px; height: auto">
             <div class="d-flex flex-column">
                 <img src="{{user.avatar}}" class="card-img-top" alt="avatar">
                 <div class="card-body ">
@@ -15,20 +15,9 @@
             </div>
             <div class="d-flex flex-row justify-content-between m-2">
                 <a class="btn btn-primary" href="users/{{user.username}}?section=about">Go to profile</a>
-                {{#isLiked ../likes user}}
-                <form action="/match/{{user.id}}/dislike">
-                    <button type="submit" class="btn btn-danger">Dislike <i class="fa fa-heart"></i></button>
-                    </form>
-                {{else}}
-                <form action="/match/{{user.id}}" method="POST"></form>
-                    <button type="submit" class="btn btn-danger">Like <i class="fa fa-heart"></i></button>
-                </form>
-                {{/isLiked}}
+                <button class="btn btn-danger">Like <i class="fa fa-heart"></i></button>
             </div>
         </div>    
         {{/isUser}}
     {{/each}}
-</div>
-<div>
-    <a class="btn btn-outline-light" href="/usersList">Find more users</a>
 </div>
