--- a/views/users/partials/songs.hbs
+++ b/views/users/partials/songs.hbs
@@ -1,5 +1,23 @@
-<div class="card-body">
-    <h5 class="card-title">Songs</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+
+<div>
+    <div class="card mb-5 p-3">
+        <div class="card mb-3 p-2">
+          <form action="/users/{{user.username}}/addSong" method="POST">
+              <label class="form-label mb-2 card-title">What's your favourite song at the moment?</label>
+              <textarea class="form-control card-text mb-4" name="song" rows="1" placeholder="Post your Youtube link"></textarea>
+              <button type="submit" class="btn btn-primary">Add song</button>
+          </form>
+        </div>
+    </div>
+    
+    
+    <div class="card p-3">
+        <div class="card-body p-2">
+            {{#each songsArray as |song|}}
+            <div class="mb-5 p-2 d-flex flex-column justify-content-center align-items-center">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/{{song.path}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            {{/each}}
+        </div>
+    </div>
 </div>
