--- a/views/users/partials/activity.hbs
+++ b/views/users/partials/activity.hbs
@@ -12,6 +12,7 @@
         <div class="card mb-2">
             <div class="card-body">
                 <p class="card-text">{{../user.username}} posted {{element.message}}</p>
+                 <img src="{{element.image}}" class="img-fluid max-size" alt="...">
                 <small class="card-text d-block">{{date element.createdAt}}</small>
             </div>
         </div>
