--- a/views/users/profile/home.hbs
+++ b/views/users/profile/home.hbs
@@ -5,11 +5,11 @@
           <button type="submit" onclick="findAvatar()"><img class="avatar"src="{{user.avatar}}" alt="Avatar Image"></button>
         </label>
     </form>
-    <h2 class="ps-3 modal-dialog-centered flex-grow-1">{{user.username}}</h2>
+    <h2 class="ps-3 modal-dialog-centered flex-grow-1">{{user.username}}   {{user.city}} {{user.age}}</h2> 
     <div>
         <a class="btn btn-secondary me-1">Add photo</a>
         <a class="btn btn-secondary me-1">Likes</a>
-        <a class="btn btn-secondary">Random</a>
+        <a href="/users/{{user.username}}/settings" class="btn btn-secondary"><i class="fa fa-gear"></i></a>
     </div>
 </div>
 
@@ -27,7 +27,7 @@
             </div>
          </div>
         
-         <div class="content col-8">
+         <div class="content col-7">
             <div class="about {{activeSectionClass 'about' currentSection}} p-3 bg-secondary rounded" style="--bs-bg-opacity: .5;">
                 {{> aboutme}}
             </div>
@@ -45,7 +45,7 @@
             </div>
          </div>
 
-         <div class="col sidecontent bg-secondary rounded p-3" style="--bs-bg-opacity: .5;">
+         <div class="col-3 sidecontent bg-secondary rounded p-2" style="--bs-bg-opacity: .5;">
              <div class="card mb-5">
                 <div class="card-body">
                     <p class="card-text">My photos</p>
@@ -56,9 +56,12 @@
                 <div class="card-body">
                     <h5 class="card-title">Facts about me:</h5>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Nationality</li>
-                        <li class="list-group-item">Height</li>
-                        <li class="list-group-item">Orientation</li>
+                        <li class="list-group-item justify-content-between align-items-center"><i class="fa fa-flag"></i> Nationality<p>{{user.nationality}}</p></li>
+                        <li class="list-group-item justify-content-between align-items-center"><i class="fa fa-globe"></i> City<p>{{user.city}}</p></li>
+                        <li class="list-group-item justify-content-between align-items-center"><i class="fa fa-user"></i> Height<p>{{user.height}}</p></li>
+                        <li class="list-group-item justify-content-between align-items-center"><i class="fa fa-compass"></i> Orientation<p>{{user.orientation}}</p></li>
+                        <li class="list-group-item justify-content-between align-items-center"><i class="fa fa-heart"></i> Status<p>{{user.status}}</p></li>
+                        <li class="list-group-item justify-content-between align-items-center"><i class="fa fa-star"></i> Here for<p>{{user.hereFor}}</p></li>
                     </ul>
                 </div>
                 </div>
