--- a/views/users/profile/settings.hbs
+++ b/views/users/profile/settings.hbs
@@ -20,13 +20,13 @@
   </div>
   <div class="col-4">
     <label class="form-label">City</label>
-    <input type="text" class="form-control">
+    <input type="text" class="form-control"  value="{{user.city}}" name="city">
     </div>
   </div>
   <div class="d-flex flex-row align-items-center justify-content-between">
       <div class="col-md-3">
         <label for="validationServer04" class="form-label"></label>
-        <select class="form-select">
+        <select class="form-select" name="status" value="{{user.status}}">
           <option>Status</option>
           <option>Single</option>
           <option>In a relationship</option>
@@ -35,7 +35,7 @@
       </div>
       <div class="col-md-3">
         <label for="validationServer04" class="form-label"></label>
-        <select class="form-select">
+        <select class="form-select" name="orientation" value="{{user.orientation}}">
           <option>Orientation</option>
           <option>Straight</option>
           <option>Gay</option>
@@ -44,7 +44,7 @@
       </div>
         <div class="col-md-3">
         <label for="validationServer04" class="form-label"></label>
-        <select class="form-select">
+        <select class="form-select" name="gender" value="{{user.gender}}">
           <option>Gender</option>
           <option>Male</option>
           <option>Female</option>
@@ -53,6 +53,40 @@
       </div>
   </div>
   </div>
+  </div>
+  <fieldset class="form-group">
+    <div class="row">
+      <legend class="col-form-label col-sm-2 pt-0">Here for</legend>
+      <div class="col-sm-10">
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="hereFor">
+          <label class="form-check-label">
+            Dating
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="hereFor">
+          <label class="form-check-label">
+            Music discovery
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="hereFor">
+          <label class="form-check-label">
+            Concert buddies
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="hereFor">
+          <label class="form-check-label">
+            New friends
+          </label>
+        </div>
+    </fieldset>
+  <div>Start building your photo collection!</div>
+  <div class="input-group mb-3">
+    <label class="input-group-text" for="inputGroupFile01"><i class="fa fa-image"></i></label>
+    <input type="file" class="form-control" name="photos" multiple>
   </div>
   <div class="col-12">
     <button class="btn btn-primary" type="submit">Submit changes</button>
