--- a/views/users/partials/songs.hbs
+++ b/views/users/partials/songs.hbs
@@ -5,7 +5,7 @@
           <form action="/users/{{user.username}}/addSong" method="POST">
               <label class="form-label mb-2 card-title">What's your favourite song at the moment?</label>
               <textarea class="form-control card-text mb-4" name="song" rows="1" placeholder="Post your Youtube link"></textarea>
-              <button type="submit" class="btn btn-primary">Add song</button>
+              <button type="submit" class="btn btn-light">Add song</button>
           </form>
         </div>
     </div>
