--- a/views/common/home.hbs
+++ b/views/common/home.hbs
@@ -1,23 +1,37 @@
-<div class="d-flex justify-content-center mb-5">
-    <div class="card col-6 text-end">
+
+
+<div class="d-flex flex-row row">
+  <div class="col-2 me-5">
+    <div class="card d-flex justify-content-start">
+      <h5><i class="fa fa-thumbs-up"></i> My likes</h5>
       <div class="card-body">
-        <form method="POST" action="/home" enctype="multipart/form-data">
-                <textarea class="form-control overflow-y-auto mb-2" name="message" rows="3" placeholder="What's on your mind, {{currentUser.username}}?"></textarea>
-                <div class="input-group mb-2">
-                <span class="input-group-text"><i class="fa fa-music"></i></span>
-                <textarea class="form-control" rows="1" aria-label="With textarea" name="song" placeholder="Share your Youtube URL to post a song"></textarea>
-                </div>
-                <div class="input-group mb-3">
-                  <label class="input-group-text" for="image"><i class="fa fa-picture-o"></i></label> 
-                  <input type="file" name="image" class="form-control {{#if errors.image}}is-invalid{{/if}}">
-                </div>
-                <button type="submit" class="btn btn-outline-secondary">Post</button>
-            </form>
+        {{#each likes as |like|}}
+          <img>
+        {{/each}}
       </div>
     </div>
+  </div>
+  <div class="justify-content-center col-6 ms-5 mb-5">
+      <div class="card text-end">
+        <div class="card-body">
+          <form method="POST" action="/home" enctype="multipart/form-data">
+                  <textarea class="form-control overflow-y-auto mb-2" name="message" rows="3" placeholder="What's on your mind, {{currentUser.username}}?"></textarea>
+                  <div class="input-group mb-2">
+                  <span class="input-group-text"><i class="fa fa-music"></i></span>
+                  <textarea class="form-control" rows="1" aria-label="With textarea" name="song" placeholder="Share your Youtube URL to post a song"></textarea>
+                  </div>
+                  <div class="input-group mb-3">
+                    <label class="input-group-text" for="image"><i class="fa fa-picture-o"></i></label>
+                    <input type="file" name="image" class="form-control {{#if errors.image}}is-invalid{{/if}}">
+                  </div>
+                  <button type="submit" class="btn btn-outline-secondary">Post</button>
+              </form>
+        </div>
+      </div>
+  </div>
 </div>
 <div class="d-flex justify-content-center">
-    <div class="card p-2 col-8">
+    <div class="card bg-secondary p-4 col-6">
       {{#each posts as |post|}} 
         <div class="card p-2 mb-5 border border-light">
             <div class="d-flex justify-content-between">
