--- a/views/users/partials/tastes.hbs
+++ b/views/users/partials/tastes.hbs
@@ -1,9 +1,7 @@
 <div class="card-body">
     <h5 class="card-title">Genres</h5>
-    <div class="form-control" style="height: 10rem"> {{#each user.artists as |artist|}}
-        {{#each artist.genres as |genre|}}
-        {{genre}},
-        {{/each}}
+    <div class="form-control" style="height: 10rem"> {{#each tastes as |taste|}}
+       {{taste}},
         {{/each}} 
     </div>
 </div>
