--- a/views/users/profile/settings.hbs
+++ b/views/users/profile/settings.hbs
@@ -3,7 +3,7 @@
     <img src="{{user.avatar}}" class="img-thumbnail avatar" alt="Avatar">
     <div class="mb-3 col-4">
         <label for="formFile" class="form-label" for="image">Change your profile picture</label>
-        <input  class="form-control" name="avatar" type="file" id="formFile">
+        <input  class="form-control" name="avatar" type="file" id="formFile" multiple>
     </div>
   </div>
  
@@ -25,69 +25,57 @@
   </div>
   <div class="d-flex flex-row align-items-center justify-content-between">
       <div class="col-md-3">
-        <label for="validationServer04" class="form-label"></label>
-        <select class="form-select" name="status" value="{{user.status}}">
-          <option>Status</option>
-          <option>Single</option>
-          <option>In a relationship</option>
-          <option>Married</option>
+        <label class="form-label" for="status">Status</label>
+        <select class="form-select" name="status">
+          <option value="Single" {{selected "Single" user.status}}>Single</option>
+          <option value="In a relationship" {{selected "In a relationship" user.status}}>In a relationship</option>
+          <option value="Married" {{selected "Married" user.status}}>Married</option>
         </select>
       </div>
       <div class="col-md-3">
-        <label for="validationServer04" class="form-label"></label>
-        <select class="form-select" name="orientation" value="{{user.orientation}}">
-          <option>Orientation</option>
-          <option>Straight</option>
-          <option>Gay</option>
-          <option>Bisexual</option>
+        <label for="orientation" class="form-label">Orientation</label>
+        <select class="form-select" name="orientation">
+          <option value="Straight" {{selected "Straight" user.orientation}}>Straight</option>
+          <option value="Gay" {{selected "Gay" user.orientation}}>Gay</option>
+          <option value="Bisexual" {{selected "Bisexual" user.orientation}}>Bisexual</option>
         </select>
       </div>
         <div class="col-md-3">
-        <label for="validationServer04" class="form-label"></label>
-        <select class="form-select" name="gender" value="{{user.gender}}">
-          <option>Gender</option>
-          <option>Male</option>
-          <option>Female</option>
-          <option>I prefer not to say</option>
+        <label for="gender" class="form-label">Gender</label>
+        <select class="form-select" name="gender">
+          <option value="Male" {{selected "Male" user.gender}}>Male</option>
+          <option value="Female" {{selected "Female" user.gender}}>Female</option>
+          <option value="I prefer not to say" {{selected "I prefer not to say" user.gender}}>I prefer not to say</option>
         </select>
       </div>
   </div>
   </div>
   </div>
-  <fieldset class="form-group">
-    <div class="row">
-      <legend class="col-form-label col-sm-2 pt-0">Here for</legend>
-      <div class="col-sm-10">
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="hereFor">
-          <label class="form-check-label">
-            Dating
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="hereFor">
-          <label class="form-check-label">
-            Music discovery
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="hereFor">
-          <label class="form-check-label">
-            Concert buddies
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="hereFor">
-          <label class="form-check-label">
-            New friends
-          </label>
-        </div>
-    </fieldset>
+  <div class="radioForm">
+    <p>Here for:</p>
+    <div class="form-check">
+      <input class="form-check-input" value="Dating" type="checkbox" name="hereFor" {{checked "Dating" user.hereFor}}>
+      <label class="form-check-label">Dating</label>
+    </div>
+      <div class="form-check">
+      <input class="form-check-input" value="Music Discovery" type="checkbox" name="hereFor" {{checked "Music Discovery" user.hereFor}}>
+      <label class="form-check-label">Music Discovery</label>
+    </div>
+      <div class="form-check">
+      <input class="form-check-input" value="Concert Buddies" type="checkbox" name="hereFor" {{checked "Concert Buddies" user.hereFor}}>
+      <label class="form-check-label">Concert Buddies</label>
+    </div>
+      <div class="form-check">
+      <input class="form-check-input" value="New Friends" type="checkbox" name="hereFor" {{checked "New Friends" user.hereFor}}>
+      <label class="form-check-label">New Friends</label>
+    </div>
+  </div>
   <div>Start building your photo collection!</div>
   <div class="input-group mb-3">
     <label class="input-group-text" for="inputGroupFile01"><i class="fa fa-image"></i></label>
     <input type="file" class="form-control" name="photos" multiple>
   </div>
+  <!-- TO DO HEIGHT-->
   <div class="col-12">
     <button class="btn btn-primary" type="submit">Submit changes</button>
   </div>
