--- a/views/users/partials/aboutme.hbs
+++ b/views/users/partials/aboutme.hbs
@@ -1,4 +1,4 @@
-<div class="card mb-5 ">
+<div class="card border-light mb-5 ">
     <div class="card-body ">
         <div class="d-flex justify-content-between">
             <h5 class="card-title fa-regular fa-pen-to-square">About me...</h5> 
@@ -11,7 +11,7 @@
         </form>
     </div>
 </div>
-<div class="card mb-5">
+<div class="card border-light mb-5">
     <div class="card-body ">
         <h5 class="card-title">My favorite bands are...</h5>
          <form method="POST" action="/users/{{user.username}}?section=about">
@@ -22,7 +22,7 @@
     </div>
 </div>
 
-<div class="card">
+<div class="card border-light">
     <div class="card-body">
         <h5>Shoutbox</h5>
         <div class="card-body">
