--- a/views/common/list.hbs
+++ b/views/common/list.hbs
@@ -1,7 +1,7 @@
 <div class="row mb-4">
     {{#each users as |user|}}
         {{#isUser user ../currentUser}}
-        <div class="card col-3 d-flex flex-column justify-content-between me-5 p-1" style="width: 250px; height: auto">
+        <div class="card col-3 d-flex flex-column justify-content-between me-5 p-1 border-light mb-2" style="width: 250px; height: auto">
             <div class="d-flex flex-column">
                 <img src="{{user.avatar}}" class="card-img-top" alt="avatar">
                 <div class="card-body ">
