--- a/views/common/login.hbs
+++ b/views/common/login.hbs
@@ -1,3 +1,7 @@
+<div class="d-flex justify-content-center">
+  <h1 class="display-1">Welcome to Tastebuds!</h1>
+</div>
+
 <div class="d-flex flex-column align-items-center justify-content-center">
   <div class="col-4">
     <form action="/login" method="POST">
