--- a/views/users/partials/tastes.hbs
+++ b/views/users/partials/tastes.hbs
@@ -1,6 +1,6 @@
 <div class="card-body">
-    <h5 class="card-title">Genres</h5>
-    <div class="form-control" style="height: 10rem"> {{#each tastes as |taste|}}
+    <h5 class="card-title text-light">Genres</h5>
+    <div class="form-control border-light" style="height: 10rem"> {{#each tastes as |taste|}}
        {{taste}},
         {{/each}} 
     </div>
