--- a/views/common/login.hbs
+++ b/views/common/login.hbs
@@ -15,10 +15,10 @@
         <input type="password" name="password" value="{{user.password}}" class="form-control {{#if errors.password}}is-invalid{{/if}}">
         {{#if errors.password}}<div class="invalid-feedback">{{errors.password}}</div>{{/if}}
       </div>
-      <button type="submit" class="mb-3 btn btn-primary">Log in</button>
+      <button type="submit" class="mb-3 btn btn-secondary">Log in</button>
     </form>
     <div>
-    <a href="/signup" class="btn btn-primary">Sign Up</a>
+    <a href="/signup" class="btn btn-secondary">Sign Up</a>
     </div>
   </div>
 </div>
