--- a/views/common/home.hbs
+++ b/views/common/home.hbs
@@ -1,5 +1,5 @@
-<div class="d-flex flex-row row">
-  <div class="col-2 me-5">
+<div class="d-flex flex-row row pt-3">
+  <div class="col-3">
     <div class="card border-light p-2 d-flex justify-content-start">
       <h5><i class="fa fa-thumbs-up"></i> My likes</h5>
       <div class="card-body">
@@ -9,7 +9,7 @@
       </div>
     </div>
   </div>
-  <div class="justify-content-center col-6 ms-5 mb-5">
+  <div class="justify-content-center col-6 mb-5">
       <div class="card border-light text-end mb-5">
         <div class="card-body">
           <form method="POST" action="/home" enctype="multipart/form-data">
