--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,16 +1,31 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary mb-2">
-  <div class="">
-    <div class="navbar-nav">
+  <div class="container-fluid justify-content-between">
+    <div class="navbar-nav d-flex mb-2 row">
+        <div class="p-2 col">
+          <a class="navbar-brand" href="/home">
+          <img src="https://tbassets.s3.amazonaws.com/assets/big-square-logo.png" class="icon">
+          </a>
+        </div>
+        <div class="p-2 col">
         <a class="nav-link" aria-current="page" href="/home">Home</a>
+        </div>
         {{#if currentUser}}
-          <a class="nav-link" href="/users/{{currentUser.username}}?section=about">Profile</a>
+        <div class="p-2 col">
           <a class="nav-link" href="/match">Match</a>
+        </div>
+        <div class="p-2 col">
+          <a class="nav-link" href="/users/{{currentUser.username}}?section=about">Profile</a>
+        </div>
+        <div class="p-2 col">
           <a class="nav-link" href="/logout">Logout</a>
+        </div>
         {{/if}}
-        <form class="d-flex ms-auto" action="/search?{{artist}}" method="GET">
-          <input class="form-control me-2" type="search" name="name" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        <div class="col-5 pt-2 "> 
+          <form class="d-flex text-end" action="/search?{{artist}}" method="GET">
+            <input class="form-control me-2" type="search" name="name" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
     </div>
   </div>
 </nav>
