--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary mb-2">
-  <div class="container-fluid justify-content-between">
+<nav class=" navbar-expand-lg bg-body-tertiary mb-2">
+  <div class="d-flex flex-row justify-content-between p-1">
     <div class="navbar-nav d-flex mb-2 row">
         <div class="p-2 col">
           <a class="navbar-brand" href="/home">
@@ -20,12 +20,12 @@
           <a class="nav-link" href="/logout">Logout</a>
         </div>
         {{/if}}
-        <div class="col-5 pt-2 "> 
+        </div>
+        <div class="col-4 pt-2 "> 
           <form class="d-flex text-end" action="/search?{{artist}}" method="GET">
             <input class="form-control me-2" type="search" name="name" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
         </div>
-    </div>
   </div>
 </nav>
